Add basic structure for Yash's portfolio website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
+<!DOCTYPE html>
+<html>
+<head><title>Yash Portfolio</title></head>
+<body>
+<h1>Yashovardhan Thopte - Data Science/ML</h1>
+<p>Contact: <!--email_off-->23f3001068@ds.study.iitm.ac.in<!--/email_off--></p>
+<!-- Add project links/badges here -->
+</body>
+</html>
 
